--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <section id="header">
       <header>
         <span class="image avatar"
-          ><img src="images/portrait.png" alt=""
+          ><img src="images/profil_pic_wb.jpg" alt=""
         /></span>
-        <h1 id="logo"><a href="#">VOTRE NOM</a></h1>
+        <h1 id="logo"><a href="#">William Beaudry</a></h1>
         <p>
-          Une courte description de vous<br />
-          Continuer la courte description
+          Passionné de politique, de plein air et de vélo !<br />
+          Fonctionnaire à temps partiel, étudiant à temps plein.
         </p>
       </header>
       <nav id="nav">
@@ -39,27 +39,26 @@
         <ul class="icons">
           <li>
             <!-- Vous pouvez mettre en hyperlien vos reseaux sociaux en modifiant la valeur de href-->
-            <a hrf="https://x.com/MLB/" class="icon brands fa-twitter"
+            <a href="https://x.com/Beaudry5William" class="icon brands fa-twitter"
               ><span class="label">Twitter</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
+            <a href="https://www.facebook.com/william.beaudry.92/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-linkedin"
+            <a href="https://www.linkedin.com/in/william-beaudry-36a23815a/" class="icon brands fa-linkedin"
               ><span class="label">LinkedIn</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-github"
+            <a href="https://github.com/WilliamBeaudry" class="icon brands fa-github"
               ><span class="label">Github</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon solid fa-envelope"
+            <a href="mailto:william.beaudry5@gmail.com" class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
           </li>
@@ -78,16 +77,11 @@
           </div>
           <div class="container">
             <header class="major">
-              <h2>VOTRE NOM</h2>
-              <p>Le sous-titre de votre site.</p>
+              <h2>William Beaudry</h2>
+              <p>Politologue à mes heures, apprenti chercheur et bien plus</p>
             </header>
             <p>
-              Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus
-              col. Commodo id in arcu ante lorem ipsum sed accumsan erat
-              praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo.
-              Vis aliquet tortor ultricies non ante erat nunc integer eu ante
-              ornare amet commetus vestibulum blandit integer in curae ac
-              faucibus integer non. Adipiscing cubilia elementum.
+              1999, H, Québec, Baccalauréat, Athée, Blanc, Français, Étudiant et salarié: voici une brève description de ma personne.
             </p>
           </div>
         </section>
@@ -156,7 +150,7 @@
               <div class="col-12">
                 <!-- Vous pouvez mettre votre email ici au lieu de your-email@example.com -->
                 <a
-                  href="mailto:your-email@example.com?subject=Sujet&body=Votre message ici."
+                  href="mailto:william.beaudry5@gmail.com?subject=Sujet&body=Votre message ici."
                   class="button primary"
                 >
                   Envoyer un email
