Ajout résumé et réalisations

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
               <p>Politologue à mes heures, apprenti chercheur et bien plus</p>
             </header>
             <p>
-              1999, H, Québec, Baccalauréat, Athée, Blanc, Français, Étudiant et salarié: voici une brève description de ma personne.
+              1999, H, Québec, Baccalauréat, Athée, Blanc, Francophone, Étudiant et salarié: voici une brève description de ma personne.
+              Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
+              Fonctionnaire à temps partiel, je suis conseiller à la recherche chez Élections Québec où j'ai oeuvré sur un rapport de la participation électorale des communautés autochtones lors des élections provinciales depuis 2007.
             </p>
           </div>
         </section>
@@ -91,9 +93,7 @@
           <div class="container">
             <h3>Mes réalisations</h3>
             <p>
-              Integer eu ante ornare amet commetus vestibulum blandit integer in
-              curae ac faucibus integer non. Adipiscing cubilia elementum
-              integer lorem ipsum dolor sit amet.
+              Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse en revanche.
             </p>
             <ul class="feature-icons">
               <li class="icon solid fa-code">
