--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
             </p>
             <ul class="feature-icons">
               <li class="icon solid fa-code">
-                Ici vous pouvez écrire ce que vous voulez
+                Secrétaire aux Finances de l'Association des politologues étudiants de l'Université Laval - 2024-...
               </li>
               <li class="icon solid fa-cubes">
-                Le class= s'occupe des logos à côté de votre texte
+                Secrétaire aux Finance de l'Association des étudiant.es en science politique de l'Université Laval - 2023-2024
               </li>
               <li class="icon solid fa-book">
-                Trouvez autant de choses à écrire que vous le voulez
+                Publication à venir d'un rapport sur la participation des communautés autochtones aux élections provinciales depuis 2007
               </li>
-              <li class="icon solid fa-coffee">Supprimez le reste</li>
-              <li class="icon solid fa-bolt">Lightning bolt</li>
-              <li class="icon solid fa-users">Shadow clone technique</li>
+              <li class="icon solid fa-coffee">Professionnel de Catan, Carcassonne, Risk et Scrabble</li>
+              <li class="icon solid fa-bolt">Tour du Lac-Saint-Jean en 3 jours - 2024</li>
+              <li class="icon solid fa-users">Fluent en Français, anglais et The Office</li>
             </ul>
           </div>
         </section>
