Changement du résumé et des points de forme

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
               1999, H, Québec, Baccalauréat, Athée, Blanc, Francophone, Étudiant et salarié: voici une brève description de ma personne.
               Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
               Fonctionnaire à temps partiel, je suis conseiller à la recherche chez Élections Québec où j'ai oeuvré sur un rapport de la participation électorale des communautés autochtones lors des élections provinciales depuis 2007.
+              Officieusement vaincu le cancer colorectal depuis mars 2024, je croque dans la vie à chaque jour à travers étude et travail !
             </p>
           </div>
         </section>
@@ -97,17 +98,17 @@
             </p>
             <ul class="feature-icons">
               <li class="icon solid fa-code">
-                Secrétaire aux Finances de l'Association des politologues étudiants de l'Université Laval - 2024-...
+                Secrétaire aux Finances de l'AEESPUL et de l'APEUL
               </li>
               <li class="icon solid fa-cubes">
-                Secrétaire aux Finance de l'Association des étudiant.es en science politique de l'Université Laval - 2023-2024
+                Professionnel de Catan, Carcassonne, Risk et Scrabble
               </li>
               <li class="icon solid fa-book">
-                Publication à venir d'un rapport sur la participation des communautés autochtones aux élections provinciales depuis 2007
+                Publication insitutionnelle à venir
               </li>
-              <li class="icon solid fa-coffee">Professionnel de Catan, Carcassonne, Risk et Scrabble</li>
-              <li class="icon solid fa-bolt">Tour du Lac-Saint-Jean en 3 jours - 2024</li>
-              <li class="icon solid fa-users">Fluent en Français, anglais et The Office</li>
+              <li class="icon solid fa-coffee">Tour du Lac-Saint-Jean à vélo en 3 jours</li>
+              <li class="icon solid fa-bolt">Amateur du lait en chocolat du Québec</li>
+              <li class="icon solid fa-users">Locuteur fluent en Français, anglais et The Office</li>
             </ul>
           </div>
         </section>
