Correction d'une faute

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 Publication insitutionnelle à venir
               </li>
               <li class="icon solid fa-coffee">Tour du Lac-Saint-Jean à vélo en 3 jours</li>
-              <li class="icon solid fa-bolt">Amateur du lait en chocolat du Québec</li>
+              <li class="icon solid fa-bolt">Amateur du lait au chocolat du Québec</li>
               <li class="icon solid fa-users">Locuteur fluent en Français, anglais et The Office</li>
             </ul>
           </div>
