Changer les icones

--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
               Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse en revanche.
             </p>
             <ul class="feature-icons">
-              <li class="icon solid fa-code">
+              <li class="icon solid fa-dollar-sign">
                 Secrétaire aux Finances de l'AEESPUL et de l'APEUL
               </li>
-              <li class="icon solid fa-cubes">
+              <li class="icon solid fa-chess-board">
                 Professionnel de Catan, Carcassonne, Risk et Scrabble
               </li>
-              <li class="icon solid fa-book">
+              <li class="icon solid fa-file-alt">
                 Publication insitutionnelle à venir
               </li>
-              <li class="icon solid fa-coffee">Tour du Lac-Saint-Jean à vélo en 3 jours</li>
-              <li class="icon solid fa-bolt">Amateur du lait au chocolat du Québec</li>
-              <li class="icon solid fa-users">Locuteur fluent en Français, anglais et The Office</li>
+              <li class="icon solid fa-bicycle">Tour du Lac-Saint-Jean à vélo en 3 jours</li>
+              <li class="icon solid fa-carton">Amateur du lait au chocolat du Québec</li>
+              <li class="icon solid fa-comment">Locuteur fluent en Français, anglais et The Office</li>
             </ul>
           </div>
         </section>
