Changement du carton pour une vache

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 Publication insitutionnelle à venir
               </li>
               <li class="icon solid fa-bicycle">Tour du Lac-Saint-Jean à vélo en 3 jours</li>
-              <li class="icon solid fa-carton">Amateur du lait au chocolat du Québec</li>
+              <li class="icon solid fa-cow">Amateur du lait au chocolat du Québec</li>
               <li class="icon solid fa-comment">Locuteur fluent en Français, anglais et The Office</li>
             </ul>
           </div>
