Changement de quelques détails, notamment le résumé

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
             </header>
             <p>
               1999, H, Québec, Baccalauréat, Athée, Blanc, Francophone, Étudiant et salarié: voici une brève description de ma personne.
-              Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
-              Fonctionnaire à temps partiel, je suis conseiller à la recherche chez Élections Québec où j'ai oeuvré sur un rapport de la participation électorale des communautés autochtones lors des élections provinciales depuis 2007.
-              Officieusement vaincu le cancer colorectal depuis mars 2024, je croque dans la vie à chaque jour à travers étude et travail !
+              Certains diront <em>« Un site internet qui finit par .lol, ça ne fait pas très sérieux voyons</em>, mais l'analyse coût-bénéfice derrière ce choix vaut la peine d'être expliquée. Le domaine <em>.lol</em> fait partie des moins cher que vous trouverez sur <em>namecheap</em> et s'il semble peu sérieux, je suis certain que vous vous en rappelerai pour cette raison en revanche ! 
+              Bas coût + mémorisation facile = une recette gagnante !
             </p>
           </div>
         </section>
@@ -94,7 +93,9 @@
           <div class="container">
             <h3>Mes réalisations</h3>
             <p>
-              Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse en revanche.
+              Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse en revanche. Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
+              Fonctionnaire à temps partiel, je suis conseiller à la recherche chez Élections Québec où j'ai oeuvré sur un rapport de la participation électorale des communautés autochtones lors des élections provinciales depuis 2007.
+              Officieusement vaincu le cancer colorectal depuis mars 2024, je croque dans la vie à chaque jour à travers étude et travail !
             </p>
             <ul class="feature-icons">
               <li class="icon solid fa-dollar-sign">
