Corrections de quelques fautes et renommer onglet

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav id="nav">
         <ul>
           <li><a href="#one" class="active">À propos</a></li>
-          <li><a href="#two">Mon travail</a></li>
+          <li><a href="#two">Mes réalisations</a></li>
           <li><a href="#three">Mon CV</a></li>
           <li><a href="#four">Contact</a></li>
         </ul>
@@ -82,7 +82,7 @@
             </header>
             <p>
               1999, H, Québec, Baccalauréat, Athée, Blanc, Francophone, Étudiant et salarié: voici une brève description de ma personne.
-              Certains diront <em>« Un site internet qui finit par .lol, ça ne fait pas très sérieux voyons</em>, mais l'analyse coût-bénéfice derrière ce choix vaut la peine d'être expliquée. Le domaine <em>.lol</em> fait partie des moins cher que vous trouverez sur <em>namecheap</em> et s'il semble peu sérieux, je suis certain que vous vous en rappelerai pour cette raison en revanche ! 
+              Certains diront <em>« Un site internet qui finit par .lol, ça ne fait pas très sérieux voyons</em>», mais l'analyse coût-bénéfice derrière ce choix vaut la peine d'être expliquée. Le domaine <em>.lol</em> fait partie des moins chers que vous trouverez sur <em>namecheap</em> et s'il semble peu sérieux, je suis certain que vous vous en rappelerez pour cette raison en revanche ! 
               Bas coût + mémorisation facile = une recette gagnante !
             </p>
           </div>
@@ -93,7 +93,8 @@
           <div class="container">
             <h3>Mes réalisations</h3>
             <p>
-              Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse en revanche. Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
+              Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse cependant. 
+              Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
               Fonctionnaire à temps partiel, je suis conseiller à la recherche chez Élections Québec où j'ai oeuvré sur un rapport de la participation électorale des communautés autochtones lors des élections provinciales depuis 2007.
               Officieusement vaincu le cancer colorectal depuis mars 2024, je croque dans la vie à chaque jour à travers étude et travail !
             </p>
@@ -102,14 +103,14 @@
                 Secrétaire aux Finances de l'AEESPUL et de l'APEUL
               </li>
               <li class="icon solid fa-chess-board">
-                Professionnel de Catan, Carcassonne, Risk et Scrabble
+                Professionnel de Catan, Carcassonne, Risk et Scrabble entre autres
               </li>
               <li class="icon solid fa-file-alt">
                 Publication insitutionnelle à venir
               </li>
               <li class="icon solid fa-bicycle">Tour du Lac-Saint-Jean à vélo en 3 jours</li>
-              <li class="icon solid fa-tractor">Amateur du lait au chocolat du Québec</li>
-              <li class="icon solid fa-comment">Locuteur fluent en Français, anglais et The Office</li>
+              <li class="icon solid fa-tractor">Amateur du lait au chocolat québécois</li>
+              <li class="icon solid fa-comment">Locuteur fluent en français, anglais et The Office</li>
             </ul>
           </div>
         </section>
