--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <style>
+      body {
+      background-color: #4A90E2;
+      }    
+      </style>
   </head>
   <body class="is-preload">
     <!-- Header -->
