Ajout d'un titre au site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Ce qui va apparaître dans la tab de votre site</title>
+    <title>William Beaudry, étudiant, fonctionnaire et bien plus</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
