Ajout d'un message pour me joindre

--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
           <div class="container">
             <h3>Me joindre</h3>
             <p>
-              Integer eu ante ornare amet commetus vestibulum blandit integer in
-              curae ac faucibus integer non.
+              Pour prendre contact, n'hésitez pas à m'envoyer un courriel. Il me fera plaisir de répondre dans les plus brefs délais.
             </p>
             <div class="row gtr-uniform">
               <div class="col-12">
@@ -161,7 +160,7 @@
                   href="mailto:william.beaudry5@gmail.com?subject=Sujet&body=Votre message ici."
                   class="button primary"
                 >
-                  Envoyer un email
+                  Envoyer un courriel
                 </a>
               </div>
             </div>
