--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <style>
-      body {
-      background-color: #4A90E2;
-      }    
-      </style>
+    <link rel="stylesheet" href="assets/css/main.css"
   </head>
   <body class="is-preload">
     <!-- Header -->
