--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- One -->
         <section id="one">
           <div class="image main" data-position="center">
-            <img src="images/bg.jpeg" alt="" />
+            <img src="images/bg.jpg" alt="" />
           </div>
           <div class="container">
             <header class="major">
