--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
           <div class="container">
             <h3>Mon CV</h3>
             <p>
-              Integer eu ante ornare amet commetus vestibulum blandit integer in
-              curae ac faucibus integer non. Adipiscing cubilia elementum
-              integer. Integer eu ante ornare amet commetus.
+              Après sept ans dans le domaine des loisirs municipaux, un été dans un camp de jour, une année sur la ligne de production de matériel médicale, une autre à l'Assemblée nationale et la dernière année et demie chez Élections Québec, je crois que mon CV vous impressionnera. Dans le cas contraire, vous pouvez l'agrémenter en m'offrant un poste pour un gradué de science politique.
             </p>
             <div class="features">
               <article>
@@ -130,10 +128,9 @@
                   ><img src="images/pic01.jpg" alt=""
                 /></a>
                 <div class="inner">
-                  <h4>Possibly broke spacetime</h4>
+                  <h4>Aspirations professionnelles</h4>
                   <p>
-                    Integer eu ante ornare amet commetus vestibulum blandit
-                    integer in curae ac faucibus integer adipiscing ornare amet.
+                    Tout emploi stimulant, hors de la fonction publique et dont le salaire est supérieur à 28 $ de l'heure sera considéré. Merci de vos suggestion ou offre.
                   </p>
                 </div>
               </article>
