Corriger des fautes

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="container">
             <h3>Mon CV</h3>
             <p>
-              Après sept ans dans le domaine des loisirs municipaux, un été dans un camp de jour, une année sur la ligne de production de matériel médicale, une autre à l'Assemblée nationale et la dernière année et demie chez Élections Québec, je crois que mon CV vous impressionnera. Dans le cas contraire, vous pouvez l'agrémenter en m'offrant un poste pour un gradué de science politique.
+              Après sept ans dans le domaine des loisirs municipaux, un été dans un camp de jour, une année sur la ligne de production de matériel médicale, une autre à l'Assemblée nationale et la dernière année et demie chez Élections Québec, je crois que mon CV vous impressionnera. Dans le cas contraire, vous pouvez l'embellir en m'offrant un poste pour gradué de science politique.
             </p>
             <div class="features">
               <article>
@@ -130,7 +130,7 @@
                 <div class="inner">
                   <h4>Aspirations professionnelles</h4>
                   <p>
-                    Tout emploi stimulant, hors de la fonction publique et dont le salaire est supérieur à 28 $ de l'heure sera considéré. Merci de vos suggestion ou offre.
+                    Tout emploi stimulant, hors de la fonction publique et dont le salaire est supérieur à 28 $ de l'heure sera considéré. Merci de vos suggestions ou de vos offres.
                   </p>
                 </div>
               </article>
