Ajout de ponctuation

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </header>
             <p>
               1999, H, Québec, Baccalauréat, Athée, Blanc, Francophone, Étudiant et salarié: voici une brève description de ma personne.
-              Certains diront <em>« Un site internet qui finit par .lol, ça ne fait pas très sérieux voyons</em>», mais l'analyse coût-bénéfice derrière ce choix vaut la peine d'être expliquée. Le domaine <em>.lol</em> fait partie des moins chers que vous trouverez sur <em>namecheap</em> et s'il semble peu sérieux, je suis certain que vous vous en rappelerez pour cette raison en revanche ! 
+              Certains diront : <em>« un site internet qui finit par .lol, ça ne fait pas très sérieux voyons</em>», mais l'analyse coût-bénéfice derrière ce choix vaut la peine d'être expliquée. Le domaine <em>.lol</em> fait partie des moins chers que vous trouverez sur <em>namecheap</em> et s'il semble peu sérieux, je suis certain que vous vous en rappelerez pour cette raison en revanche ! 
               Bas coût + mémorisation facile = une recette gagnante !
             </p>
           </div>
