--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse cependant. 
               Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
               Fonctionnaire à temps partiel, je suis conseiller à la recherche chez Élections Québec où j'ai oeuvré sur un rapport de la participation électorale des communautés autochtones lors des élections provinciales depuis 2007.
-              Officieusement vaincu le cancer colorectal depuis mars 2024, je croque dans la vie à chaque jour à travers étude et travail !
+              En rémission du cancer colorectal depuis mars 2024, je croque dans la vie à chaque jour à travers étude et travail !
             </p>
             <ul class="feature-icons">
               <li class="icon solid fa-dollar-sign">
