--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </header>
       <nav id="nav">
         <ul>
-          <li><a href="#one" class="active">À propos</a></li>
-          <li><a href="#two">Mes réalisations</a></li>
-          <li><a href="#three">Mon CV</a></li>
+          <li><a href="#one" class="active">D'où je viens</a></li>
+          <li><a href="#two">Mes expériences</a></li>
+          <li><a href="#three">Mes compétences</a></li>
           <li><a href="#four">Contact</a></li>
         </ul>
       </nav>
