corrections de fautes d'ortographe

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <nav id="nav">
         <ul>
           <li><a href="#one" class="active">D'où je viens</a></li>
-          <li><a href="#two">Mes expériences</a></li>
-          <li><a href="#three">Mes compétences</a></li>
+          <li><a href="#two">Mes réalisations</a></li>
+          <li><a href="#three">Mon CV</a></li>
           <li><a href="#four">Contact</a></li>
         </ul>
       </nav>
@@ -82,7 +82,7 @@
             </header>
             <p>
               1999, H, Québec, Baccalauréat, Athée, Blanc, Francophone, Étudiant et salarié: voici une brève description de ma personne.
-              Certains diront : <em>« un site internet qui finit par .lol, ça ne fait pas très sérieux voyons</em>», mais l'analyse coût-bénéfice derrière ce choix vaut la peine d'être expliquée. Le domaine <em>.lol</em> fait partie des moins chers que vous trouverez sur <em>namecheap</em> et s'il semble peu sérieux, je suis certain que vous vous en rappelerez pour cette raison en revanche ! 
+              Certains diront : <em>« un site internet qui finit par .lol, ça ne fait pas très sérieux voyons</em>», mais l'analyse coût-bénéfice derrière ce choix vous fera assurément changer d'avis. Le domaine <em>.lol</em> fait partie des moins chers que vous trouverez sur <em>namecheap</em> et s'il semble peu sérieux, je suis certain que vous vous en rappelerez pour cette raison en revanche ! 
               Bas coût + mémorisation facile = une recette gagnante !
             </p>
           </div>
@@ -93,20 +93,20 @@
           <div class="container">
             <h3>Mes réalisations</h3>
             <p>
-              Mes réalisations académiques sont plus ténues, mais je compte bien en bonifier la liste. Mon implication étudiante est plus fructueuse cependant. 
+              Mes réalisations académiques sont plus ténues n'ayant encore rien publié, mais je compte bien bonifier la liste dans les prochaines années. Mon implication étudiante a cependant été plus fructueuse. 
               Étudiant à temps plein à la maîtrise en science politique à l'Université Laval, l'intérêt de ma recherche est la politique autochtone, la participation politique et la gouvernance.
               Fonctionnaire à temps partiel, je suis conseiller à la recherche chez Élections Québec où j'ai oeuvré sur un rapport de la participation électorale des communautés autochtones lors des élections provinciales depuis 2007.
-              En rémission du cancer colorectal depuis mars 2024, je croque dans la vie à chaque jour à travers étude et travail !
+              En rémission du cancer colorectal depuis mars 2024, je croque dans la vie  chaque jour à travers mes études, le travail et surtout dans mes temps libres !
             </p>
             <ul class="feature-icons">
               <li class="icon solid fa-dollar-sign">
-                Secrétaire aux Finances de l'AEESPUL et de l'APEUL
+                Secrétaire aux Finances de l'AEESPUL, puis de l'APEUL
               </li>
               <li class="icon solid fa-chess-board">
                 Professionnel de Catan, Carcassonne, Risk et Scrabble entre autres
               </li>
               <li class="icon solid fa-file-alt">
-                Publication insitutionnelle à venir
+                Publication institutionnelle à venir
               </li>
               <li class="icon solid fa-bicycle">Tour du Lac-Saint-Jean à vélo en 3 jours</li>
               <li class="icon solid fa-tractor">Amateur du lait au chocolat québécois</li>
@@ -118,9 +118,9 @@
         <!-- Three -->
         <section id="three">
           <div class="container">
-            <h3>Mon CV</h3>
+            <h3>Mon curriculum vitae</h3>
             <p>
-              Après sept ans dans le domaine des loisirs municipaux, un été dans un camp de jour, une année sur la ligne de production de matériel médicale, une autre à l'Assemblée nationale et la dernière année et demie chez Élections Québec, je crois que mon CV vous impressionnera. Dans le cas contraire, vous pouvez l'embellir en m'offrant un poste pour gradué de science politique.
+              Après sept ans dans le domaine des loisirs, un été dans un camp de jour, une année sur la ligne de production de matériel médical, une autre à l'Assemblée nationale et la dernière année et demie chez Élections Québec, je crois que mon CV vous impressionnera. Dans le cas contraire, vous pouvez l'embellir en m'offrant un poste pour gradué de science politique.
             </p>
             <div class="features">
               <article>
@@ -130,7 +130,7 @@
                 <div class="inner">
                   <h4>Aspirations professionnelles</h4>
                   <p>
-                    Tout emploi stimulant, hors de la fonction publique et dont le salaire est supérieur à 28 $ de l'heure sera considéré. Merci de vos suggestions ou de vos offres.
+                    Tout emploi stimulant, hors de la fonction publique et dont le salaire est supérieur à 28 $ de l'heure sera considéré. Merci de vos suggestions ou de vos offres !
                   </p>
                 </div>
               </article>
@@ -143,7 +143,7 @@
           <div class="container">
             <h3>Me joindre</h3>
             <p>
-              Pour prendre contact, n'hésitez pas à m'envoyer un courriel. Il me fera plaisir de répondre dans les plus brefs délais.
+              Pour entrer en contact, n'hésitez pas à m'envoyer un courriel où visitez mes médias sociaux. Il me fera plaisir de répondre dans les plus brefs délais.
             </p>
             <div class="row gtr-uniform">
               <div class="col-12">
