--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="features">
               <article>
                 <a href="#" class="image"
-                  ><img src="icon_cv.png" alt=""
+                  ><img src="icon_cv.jpg" alt=""
                 /></a>
                 <div class="inner">
                   <h4>Aspirations professionnelles</h4>
