--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             </p>
             <div class="features">
               <article>
-                <a href="#" class="image"
-                  ><img src="images/icon_cv.jpg" alt=""
+                <a href="cv/mon_cv.pdf" class="image" target="_blank"
+                  ><img src="images/cv.png.png" alt="Aperçu du CV"
                 /></a>
                 <div class="inner">
                   <h4>Aspirations professionnelles</h4>
