changement de la direction vers cv.png

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="features">
               <article>
                 <a href="cv/mon_cv.pdf" class="image" target="_blank"
-                  ><img src="images/cv.png.png" alt="Aperçu du CV"
+                  ><img src="cv/cv.png.png" alt="Aperçu du CV"
                 /></a>
                 <div class="inner">
                   <h4>Aspirations professionnelles</h4>
