rédaction en cours

--- a/projet_session/projet_Rmd.html
+++ b/projet_session/projet_Rmd.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2024-11-16" />
 
-<title>projet.Rmd</title>
+<title>Ce qui distingue les communautés autochtones du Québec à celles des autres provinces: la participation aux élections fédérales de 2004 à 2011</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,9 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">projet.Rmd</h1>
+<h1 class="title toc-ignore">Ce qui distingue les communautés
+autochtones du Québec à celles des autres provinces: la participation
+aux élections fédérales de 2004 à 2011</h1>
 <h4 class="author">William Beaudry</h4>
 <h4 class="date">2024-11-16</h4>
 
